<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_control</name>
  <version>0.0.0</version>
  <description>rover</description>
  <maintainer email="karanpreet.singh.raja@gmail.com">Karanpreet Raja</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rover_bringup</exec_depend>

  <exec_depend>rover_description</exec_depend>

 
 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
